[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sensorhub"
version = "0.2.1"
dependencies = [
    "flask",
    "flask-caching",
    "flask-restful",
    "flask-sqlalchemy",
    "gunicorn<25",
    "jsonschema",
    "rfc3339-validator",
    "SQLAlchemy",
]

[tool.setuptools.packages.find]
include = ["sensorhub*"]
